# chessnet_webapp

./: .gitignore  Dockerfile  NeuralNet.ipynb  README.md  application.py  basic_model.pt  functions.py  main_model.pt  moves_process.py  pyproject.toml  requirements.txt
networks/: main_model_epoch_1.pt  main_model_epoch_10.pt  main_model_epoch_100.pt  main_model_epoch_1000.pt  main_model_epoch_101.pt  main_model_epoch_102.pt  main_model_epoch_103.pt  main_model_epoch_104.pt  main_model_epoch_105.pt  main_model_epoch_106.pt  main_model_epoch_107.pt  main_model_epoch_108.pt  main_model_epoch_109.pt  main_model_epoch_11.pt  main_model_epoch_110.pt  main_model_epoch_111.pt  main_model_epoch_112.pt  main_model_epoch_113.pt  main_model_epoch_114.pt  main_model_epoch_115.pt  main_model_epoch_116.pt  main_model_epoch_117.pt  main_model_epoch_118.pt  main_model_epoch_119.pt  main_model_epoch_12.pt  main_model_epoch_120.pt  main_model_epoch_121.pt  main_model_epoch_122.pt  main_model_epoch_123.pt  main_model_epoch_124.pt  main_model_epoch_125.pt  main_model_epoch_126.pt  main_model_epoch_127.pt  main_model_epoch_128.pt  main_model_epoch_129.pt  main_model_epoch_13.pt  main_model_epoch_130.pt  main_model_epoch_131.pt  main_model_epoch_132.pt  main_model_epoch_133.pt  (+960 more)
static/: style.css
templates/: counter.js  form.html  form2.html  form3.html  rating.html  rating2.html
