[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.2"
Flask = "^2.3.3"
lichess = "^0.2.8"
pandas = "^2.1.0"
python-chess = "^1.999"
chess = "^1.10.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
